Fix: move logout button so it's visible.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,3 +118,8 @@ body {
   text-align: center;
   font-size: 20px;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+}
